view height fix on ie

--- a/wp-content/themes/newmark/assets/styles/layouts/_about-us.scss
+++ b/wp-content/themes/newmark/assets/styles/layouts/_about-us.scss
@@ -1,8 +1,6 @@
 $about-font-size: 22px;
 $about-sections-height: 65vh;
-@media screen and (-ms-high-contrast: none), (-ms-high-contrast: active){
-	$about-sections-height: 87vh;
-}
+$about-sections-height-ie: 87vh;
 
 
 //adjusting top padding to account for fixed subnav
@@ -110,7 +108,10 @@ $about-sections-height: 65vh;
 				background-color: white;
 			}
 			&:nth-child(even){
-				background-color: $medium-gray	;
+				background-color: $medium-gray;
+				@media screen and (-ms-high-contrast: none), (-ms-high-contrast: active){
+					background-color: $medium-gray-ie;
+				}
 			}
 			a{
 				padding-top: 10px;
@@ -140,6 +141,7 @@ $about-sections-height: 65vh;
 		}
 		p{
 			font-size: $about-font-size;
+
 		}
 	}
 }
@@ -212,6 +214,9 @@ $about-sections-height: 65vh;
 			}
 			&:nth-child(even){
 				background-color: $medium-gray;
+				@media screen and (-ms-high-contrast: none), (-ms-high-contrast: active){
+					background-color: $medium-gray-ie;
+				}
 			}
 			&.active{
 				a{
@@ -239,6 +244,9 @@ $about-sections-height: 65vh;
 		position: relative;
 		top: ($about-sections-height / 2.2);
 		transform: translateY(-50%);
+		@media screen and (-ms-high-contrast: none), (-ms-high-contrast: active){
+			top: ($about-sections-height-ie / 2.2);
+		}
 		li{
 			font-size: 16px;
 		}
@@ -250,6 +258,9 @@ $about-sections-height: 65vh;
 	height: $about-sections-height;
 	background-size: cover;
 	background-position: center center;
+	@media screen and (-ms-high-contrast: none), (-ms-high-contrast: active){
+		height: $about-sections-height-ie;
+	}
 }
 
 // *{
